Update 'g4u1cqarx-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:52b6ea7275a2467201b41ca6e378e2a761dd3426@sha256:657e78337d385f88841aa4a9aa0f8d24cb81e517817123d4003131d028775f9a

--- a/components/g4u1cqarx-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/g4u1cqarx-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g4u1cqarx-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:52b6ea7275a2467201b41ca6e378e2a761dd3426@sha256:657e78337d385f88841aa4a9aa0f8d24cb81e517817123d4003131d028775f9a
+          name: container-image
